[package]
name = "ratspie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "2.1.1", default-features = false, features = ["tokio"] }
zvariant = "3.1.2"
zbus_names = "2.1.0"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }